// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`select action supports actionTypes 1`] = `
.c0 {
  border-top: 1px solid #D9DCE9;
  color: #DB3643;
  margin-top: 0.5rem;
  min-width: 16rem;
  outline: none;
  overflow: hidden;
  padding: 0.5rem 0 0;
}

.c0[data-highlighted='true'] > div {
  background-color: #F6F7FC;
}

.c0:only-child {
  border: none;
  margin: 0;
  padding: 0;
}

.c1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.25rem;
  padding: 0 1rem;
  width: 100%;
}

.c2 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

<li
  aria-selected="true"
  class="c0"
  data-highlighted="false"
  id="select_2-item-4"
  role="option"
>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      Action
    </span>
  </div>
</li>
`;

exports[`select action supports icons 1`] = `
.c3 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  border-top: 1px solid #D9DCE9;
  color: #3C64F4;
  margin-top: 0.5rem;
  min-width: 16rem;
  outline: none;
  overflow: hidden;
  padding: 0.5rem 0 0;
}

.c0[data-highlighted='true'] > div {
  background-color: #F6F7FC;
}

.c0:only-child {
  border: none;
  margin: 0;
  padding: 0;
}

.c1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.25rem;
  padding: 0 1rem;
  width: 100%;
}

.c2 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

<li
  aria-selected="true"
  class="c0"
  data-highlighted="false"
  id="select_2-item-4"
  role="option"
>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      <svg
        class="c3"
        fill="currentColor"
        height="24"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="24"
      >
        <title />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
        />
      </svg>
      Action
    </span>
  </div>
</li>
`;
